<resources>
    <string name="app_name">Números</string>
    <string name="txtIngresa">¿Cuántos números deseas ordenar?</string>
    <string name="buttonIngresa">ingresar número</string>
    <string name="buttonContinuar">continuar</string>
    <string name="txtNumber">Ingresa cuantos números deseas ordenar</string>
    <string name="buttonOrdenaMayor">ordena mayor</string>
    <string name="tvNumber">Números</string>
    <string name="txtElige">Elige el modo de ordenamiento</string>
    <string name="buttonOrdenaMenor">ordena menor</string>
    <string name="IngresaNum">Ingresa número</string>
    <string name="bttnRet">Regresar</string>
</resources>