<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".MainActivity2">

    <ListView
        android:id="@+id/lv"
        android:layout_width="208dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <EditText
        android:id="@+id/etNumber2"
        android:layout_width="106dp"
        android:layout_height="59dp"
        android:ems="10"
        android:fontFamily="@font/carlomelow"
        android:hint="@string/IngresaNum"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <Button
        android:id="@+id/bttnIngresaLista"
        android:layout_width="97dp"
        android:layout_height="59dp"
        android:fontFamily="@font/carlomelow"
        android:onClick="ingresaNum"
        android:text="@string/buttonIngresa"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <Button
        android:id="@+id/bttnOrdenaMenor"
        android:layout_width="85dp"
        android:layout_height="49dp"
        android:fontFamily="@font/carlomelow"
        android:onClick="ordenaMenor"
        android:text="@string/buttonOrdenaMenor"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />

    <Button
        android:id="@+id/bttnOrdenaMayor"
        android:layout_width="85dp"
        android:layout_height="49dp"
        android:fontFamily="@font/carlomelow"
        android:onClick="ordenaMayor"
        android:text="@string/buttonOrdenaMayor"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />
</androidx.constraintlayout.widget.ConstraintLayout>