<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="339dp"
        android:layout_height="116dp"
        android:fontFamily="@font/home"
        android:text="@string/txtIngresa"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <Button
        android:id="@+id/buttonContinuar"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:fontFamily="@font/carlomelow"
        android:onClick="contButton"
        android:text="@string/buttonContinuar"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636" />

    <EditText
        android:id="@+id/etNumber1"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/home"
        android:hint="@string/txtNumber"
        android:inputType="number"
        android:minHeight="48dp"
        android:numeric="integer"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

</androidx.constraintlayout.widget.ConstraintLayout>